launchpad-buildd (116) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Remove obsolete BuilderStatus.ABORTED.
  * Remove obsolete BuildDSlave.fetchFile method, unused since October 2005.
  * Don't attempt to read entire files into memory at once when storing them
    in the file cache.

  [ Adam Conrad ]
  * Tidy up log formatting of the "Already reaped..." message. 

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 30 Aug 2013 00:31:15 +0100

launchpad-buildd (115) hardy; urgency=low

  [ Adam Conrad ]
  * Short the readlink call in scan-for-process with a true to avoid
    prematurely exiting the process scan when tripping over zombies.
  * Write to temporary cache files and then rename after validation
    to avoid the cache containing broken aborted files (LP: #471076)
  * Skip nonexistent directories in cron cleanup code to avoid vomit
    in cron log on fresh installs that lack those dirs (LP: #559115)
  * Build buildd-slave-example.conf from template-buildd-slave.conf
    using buildd-genconfig at package build time so it's not stale.
  * Add a build-dependency on python to make buildd-genconfig work.
  * Add kernel name (hey, we might build on another kernel some day)
    and hostname (to help us track build host issues) to uname call.
  * Add x32 and ppc64el to the list of 64-bit arches for linux64.
  * Strip trailing whitespace in buildd-genconfig because I'm anal.
  * Mangle recipe versions to match backports policy (LP: #1095103)
  * Make scan-for-processes log output match the other slave helpers.

  [ Colin Watson ]
  * Move scan-for-processes up to the top-level slave code so that it is
    available for more general use.
  * Make abort work properly, calling scan-for-processes to kill all
    processes in the chroot.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 29 Aug 2013 11:32:23 +0100

launchpad-buildd (114) hardy; urgency=low

  * Don't use the uname-2.6 hack when building on quantal and newer.