@@ -5,6 +5,8 @@ launchpad-buildd (116) UNRELEASED; urgency=low
   * Remove obsolete BuildDSlave.fetchFile method, unused since October 2005.
   * Don't attempt to read entire files into memory at once when storing them
     in the file cache.
+  * Rearrange build log searching to avoid reading the entire build log into
+    memory at once (LP: #1227086).
 
   [ Adam Conrad ]
   * Tidy up log formatting of the "Already reaped..." message. 
